[package]
name = "magnet-uri"
version = "0.2.1"
authors = ["Kuba Jaroszewski <jakub.jaroszewski@gmail.com>"]
description = "A library for parsing Magnet URI scheme"
repository = "https://github.com/pierd/magnet-uri"
keywords = ["magnet", "bittorrent"]
categories = ["network-programming"]
readme = "README.md"
license = "MIT"

[dependencies]
serde_urlencoded = "0.7"

[badges]
travis-ci = { repository = "pierd/magnet-uri", branch = "master" }
